# ChangeLog for net-nds/389-admin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.3 2010/07/15 10:44:14 lxnay Exp $

  15 Jul 2010; Fabio Erculiani <lxnay@gentoo.org> metadata.xml:
  update metadata.xml, herd

  11 Jul 2010; Fabio Erculiani <lxnay@gentoo.org>
  389-admin-1.1.11_rc1.ebuild:
  improve DEPEND/RDEPEND split

*389-admin-1.1.11_rc1 (11 Jul 2010)

  11 Jul 2010; Fabio Erculiani <lxnay@gentoo.org>
  +files/389-admin-cfgstuff-1.patch,
  +files/1.1.11_rc1/0001-gentoo-apache-names.patch,
  +files/1.1.11_rc1/0003-find-mod_nss.m4.patch,
  +files/1.1.11_rc1/0004-rpath-fix.configure.ac.patch,
  +files/1.1.11_rc1/0010-gentoo_selinux_makefile.patch,
  +files/1.1.11_rc1/48_mod_admserv.conf,
  +files/1.1.11_rc1/48_mod_restartd.conf, +files/389-admin.confd,
  +files/389-admin.initd, +389-admin-1.1.11_rc1.ebuild,
  +files/restart-ds-admin, +files/start-ds-admin, +files/stop-ds-admin,
  +metadata.xml:
  new ebuild, part of 389 Directory Server (http://port389.org), closes bug
  #309575
