@@ -11,6 +11,6 @@ AUX restart-ds-admin 155 RMD160 5b0323ca05f75e08c043fbb4f6221e6688d4f24c SHA1 f2
 AUX start-ds-admin 153 RMD160 b77b3e0a6d4658869e0cbf1d001e480c3141b14a SHA1 686d2748d781301dfc2f83b373efda9fbcbc253e SHA256 c4df46c6041fb11d0069ee2837361c12a05b349ac259bb9c29fa0b389de416ec
 AUX stop-ds-admin 152 RMD160 64e8627ceed23664432ced3311442c9088ded19e SHA1 101045da509e09a3f84f8cbdc41a6dd3dd6d37f3 SHA256 4e7ecdeb64807b8ce0b2da4dca8c1bb9511c8babbfe8d7ae1c9e63f490070685
 DIST 389-admin-1.1.11.rc1.tar.bz2 657171 RMD160 0bc411e0d0ed944be68f69d79378c980c54d9f22 SHA1 1e48f1f8a742476ffb2560802b3fc8c230f5db0c SHA256 8712d7a5b0ca721470a65585f359cfe4fa923996478228781393375e0d4d197e
-EBUILD 389-admin-1.1.11_rc1.ebuild 4850 RMD160 52289797d84f246245c5a1ff71513ed19eaa75b1 SHA1 6ba0a4934b78517b68b8bdff611adc830e5cf8ff SHA256 c8327cbe81ec3a73ac02a1fcb8642b2fdc02c4da905b2c1fca898c4adf565ff4
-MISC ChangeLog 1086 RMD160 bcea6fc9abc19f56dc689cd0a1e77f4ae0638cad SHA1 5d523386abeda2a1487b058f9340ac186daaf9b7 SHA256 c8d96b63040c0d44a548e6c8d7149775335bd6b1497f777f3e5f366abb019a08
+EBUILD 389-admin-1.1.11_rc1.ebuild 4826 RMD160 b488dd37d1a610299a677f9354fc47e2a0d474f0 SHA1 5f758b983a6e5b8b5e5a9540fe2881035c30a338 SHA256 d3d8a0a170d326178bc5aaa00e02abe025591132f7df4f9cf89526eabf3be9de
+MISC ChangeLog 1226 RMD160 df99d23723040e5ee76c8dbf356545dea0db7463 SHA1 d68254235dec88b45ec919a9319aab6d8c7861ab SHA256 3fee64cac7ef602a9bdf7df05214e99e5a8ee11a26ee9669df5c2684f2da7a95
 MISC metadata.xml 527 RMD160 f5e5e8933b5d37c85fde74c92266727f7f11b3b9 SHA1 3836ea478456bd04e65d2adc262200b48faf36b9 SHA256 9b67f22fea1b3f65cfaec5ef7d4d1f411436c87c9ffb107c5e6bc604b77cd31a
