@@ -1,6 +1,10 @@
 # ChangeLog for net-nds/389-admin
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.3 2010/07/15 10:44:14 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.4 2010/10/17 14:04:46 lxnay Exp $
+
+  17 Oct 2010; Fabio Erculiani <lxnay@gentoo.org>
+  389-admin-1.1.11_rc1.ebuild:
+  tweak apache2 dependencies a bit, make them more atomic
 
   15 Jul 2010; Fabio Erculiani <lxnay@gentoo.org> metadata.xml:
   update metadata.xml, herd
